syntax = "proto3";
package kiss_grpc;

message VerifyRequest {
    string path = 1;
}

message VerifyResponse {
    string hash = 1;
}

message StoreRequest {
    string name = 1;
    bytes content = 2;
    int64 ttl = 3;
}

message StoreResponse {
    string name = 1;
}

message RetrieveRequest {
    string name = 1;
}

message RetrieveResponse {
    string name = 1;
    bytes content = 2;
}

message GetProvidersRequest {
    string name = 1;
}

message GetProvidersResponse {
    string name = 1;
    repeated string providers = 2;
}

service KissService {
    rpc Store(StoreRequest) returns (StoreResponse);
    rpc Retrieve(RetrieveRequest) returns (RetrieveResponse);
    rpc GetProviders(GetProvidersRequest) returns (GetProvidersResponse);
    rpc Verify(VerifyRequest) returns (VerifyResponse);
}
